delete last column and fixed some bugs and problems with this code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
     <head>
         <title>Мытьё</title>
@@ -10,57 +10,46 @@
             <tr>
                 <th class="tit">Дата</th>
                 <th class="tit">Кто?</th>
-                <th class="tit">Хорошо?</th>
             </tr>
             <tr>
                 <td >30.10.2022</td>
                 <td class="vl">Владыко Вл. Ал.</td>
-                <td>Да</td>
             </tr>
             <tr>
                 <td>06.11.2022</td>
                 <td class="di">Владыко Дм. Ал.</td>
-                <td>Нет</td>
             </tr>
             <tr>
                 <td>13.11.2022</td>
                 <td class="vl">Владыко Вл. Ал.</td>
-                <td>Да</td>
             </tr>
             <tr>
                 <td>20.11.2022</td>
                 <td class="di">Владыко Дм. Ал.</td>
-                <td>Нет</td>
             </tr>
             <tr>
                 <td>27.11.2022</td>
                 <td class="vl">Владыко Вл. Ал.</td>
-                <td>Да</td>
             </tr>
             <tr>
                 <td>04.12.2022</td>
                 <td class="di">Владыко Дм. Ал.</td>
-                <td>Нет</td>
             </tr>
             <tr>
                 <td>11.12.2022</td>
                 <td class="vl">Владыко Вл. Ал.</td>
-                <td>Да</td>
             </tr>
             <tr>
                 <td>18.12.2022</td>
                 <td class="di">Владыко Дм. Ал.</td>
-                <td>Нет</td>
             </tr>
             <tr>
                 <td>25.12.2022</td>
                 <td class="vl">Владыко Вл. Ал.</td>
-                <td>Да</td>
             </tr>
             <tr>
                 <td>01.01.2023</td>
                 <td class="di">Владыко Дм. Ал.</td>
-                <td>Нет</td>
             </tr>
         </table>
     </body>
